<resources>
    <string name="app_name">A2</string>

    <string name="home_page_title">
        <u><b>TIC-TAC-TOE</b></u>
    </string>

    <string name="newGame">NEW GAME</string>
    <string name="history">HISTORY</string>
    <string name="pref">PREFERENCES</string>
    <string name="exit_label">EXIT</string>

    <string name="player_turn">Player 1\'s Turn</string>
    <string name="player_wins">Player 1 Wins!</string>
    <string name="play_again_button_text">PLAY AGAIN</string>
    <string name="return_button_text">RETURN</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="tie">Tie</string>

    <string name="game_settings">Game Settings</string>
    <string name="num_humans">Number of Human Players</string>
    <string name="human_goes_first">Human Goes First</string>
    <string name="player_1_symbol">Player 1 Symbol</string>
    <string name="system_settings">System Settings</string>
    <string name="clear_data">Clear Database</string>
    <string name="erease">Erase all records of games played.</string>
    <string name="one">1</string>
    <string name="two">2</string>
</resources>
