<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_page_title"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_turn"
        android:gravity="center"
        android:textSize="14sp"
        android:id="@+id/player_turn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".33"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".33"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_wins"
                android:gravity="center"
                android:id="@+id/player_wins_text_view"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".375"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/play_again_button_text"
                android:id="@+id/play_again_button"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".375"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/return_button_text"
                android:id="@+id/return_button"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>